--- a/templates/zotero.bib
+++ b/templates/zotero.bib
@@ -1,4 +1,114 @@
 
+@misc{nmbgmr_nmbgmr_2021,
+	title = {{NMBGMR} {Interactive} {Map}},
+	url = {https://maps.nmt.edu/},
+	urldate = {2021-06-16},
+	journal = {NMBGMR Interactive Map},
+	author = {{NMBGMR}},
+	year = {2021},
+}
+
+@techreport{stoeser_new_2005,
+	address = {Reston, VA},
+	type = {Open-{File} {Report}},
+	title = {New {Mexico} {Dikes}, from the {USGS} {Geologic} {Map} {Database}},
+	url = {http://pubs.usgs.gov/of/2005/1351/},
+	abstract = {This open-file report presents the results of the USGS Mineral Resources
+Program activity to compile a national-scale geologic map database to support
+national and regional level projects, including mineral resource and geo-
+environmental assessments. The only comprehensive sources of regional- and
+national-scale geologic maps are state geologic maps with scales ranging from
+1:100,000 to 1:1,000,000. Digital versions of these state maps form the core
+of what is presented here. Because no adequate geologic map exists for the
+state of Alaska, it is being compiled in regional blocks that also form part
+of this national database. It is expected that this series will completed by
+approximately the end of 2007. These maps and databases are being released
+in blocks of states or, in the case of Alaska, as compiled blocks of
+1:250,000-scale quadrangles as chapters in this series. For Alaska, formal
+maps as well as databases are being published here, whereas for the
+conterminous U.S. only state databases and preview graphics are presented,
+because published maps for most states already exist. For Alaska these
+regional compilations will form the base for compiling a new geologic map of
+the state. As documented in Chapter A, standards for the conterminous U.S.
+are somewhat different than those for Alaska and Hawaii.
+This database consists of five major Arc/Info GIS datasets for each state;
+- one: geologic map with formations,
+- two: faults (where present),
+- three: dikes (where present),
+- four: miscellaneous line features (where present),
+- five: miscellaneous point features (where present).},
+	number = {2005-1351},
+	urldate = {2021-06-16},
+	institution = {USGS},
+	author = {Stoeser, Douglas and Green, Gregory and Morath, Laurie and Heran, William and Wilson, Anna and Moore, David and Van Gosen, Bradley},
+	year = {2005},
+}
+
+@misc{usgs_tnm_2021,
+	title = {{TNM} {Download} v2},
+	url = {https://apps.nationalmap.gov/downloader/#/},
+	urldate = {2021-06-16},
+	journal = {The National Map v2},
+	author = {{USGS}},
+	year = {2021},
+}
+
+@techreport{bankey_digital_2002,
+	address = {Reston, VA},
+	type = {Open-{File} {Report}},
+	title = {Digital data grids for the magnetic anomaly map of {North} {America}},
+	url = {https://pubs.usgs.gov/of/2002/ofr-02-414/},
+	number = {2331-1258},
+	institution = {USGS},
+	author = {Bankey, Viki and Cuevas, Alejandro and Daniels, David and Finn, Carol A and Hernandez, Israel and Hill, Patricia and Kucks, Robert and Miles, Warner and Pilkington, Mark and Roberts, Carter},
+	year = {2002},
+}
+
+@techreport{stoeser_new_2005-1,
+	address = {Reston, VA},
+	type = {Open-{File} {Report}},
+	title = {New {Mexico} {Faults}, from the {USGS} {Geologic} {Map} {Database}},
+	url = {http://pubs.usgs.gov/of/2005/1351/},
+	abstract = {This open-file report presents the results of the USGS Mineral Resources
+Program activity to compile a national-scale geologic map database to support
+national and regional level projects, including mineral resource and geo-
+environmental assessments. The only comprehensive sources of regional- and
+national-scale geologic maps are state geologic maps with scales ranging from
+1:100,000 to 1:1,000,000. Digital versions of these state maps form the core
+of what is presented here. Because no adequate geologic map exists for the
+state of Alaska, it is being compiled in regional blocks that also form part
+of this national database. It is expected that this series will completed by
+approximately the end of 2007. These maps and databases are being released
+in blocks of states or, in the case of Alaska, as compiled blocks of
+1:250,000-scale quadrangles as chapters in this series. For Alaska, formal
+maps as well as databases are being published here, whereas for the
+conterminous U.S. only state databases and preview graphics are presented,
+because published maps for most states already exist. For Alaska these
+regional compilations will form the base for compiling a new geologic map of
+the state. As documented in Chapter A, standards for the conterminous U.S.
+are somewhat different than those for Alaska and Hawaii.
+This database consists of five major Arc/Info GIS datasets for each state;
+- one: geologic map with formations,
+- two: faults (where present),
+- three: dikes (where present),
+- four: miscellaneous line features (where present),
+- five: miscellaneous point features (where present).},
+	number = {2005-1351},
+	urldate = {2021-06-16},
+	institution = {USGS},
+	author = {Stoeser, Douglas and Green, Gregory and Morath, Laurie and Heran, William and Wilson, Anna and Moore, David and Van Gosen, Bradley},
+	year = {2005},
+}
+
+@misc{usgs_eerma_2021,
+	title = {{EERMA}},
+	url = {https://my.usgs.gov/eerma/},
+	urldate = {2021-06-16},
+	journal = {Energy and Environment in the Rocky Mountain Area},
+	author = {{USGS}},
+	year = {2021},
+}
+
 @misc{usgs_national_2021,
 	title = {National {Water} {Information} {System}},
 	url = {https://waterdata.usgs.gov/nwis},
@@ -35,17 +145,6 @@
 	year = {1977},
 	note = {Publisher: Elsevier},
 	pages = {41--50},
-}
-
-@techreport{bankey_digital_2002,
-	address = {Washington, D.C.},
-	type = {Open-{File} {Report}},
-	title = {Digital data grids for the magnetic anomaly map of {North} {America}},
-	url = {https://pubs.usgs.gov/of/2002/ofr-02-414/},
-	number = {2331-1258},
-	institution = {USGS},
-	author = {Bankey, Viki and Cuevas, Alejandro and Daniels, David and Finn, Carol A and Hernandez, Israel and Hill, Patricia and Kucks, Robert and Miles, Warner and Pilkington, Mark and Roberts, Carter},
-	year = {2002},
 }
 
 @article{maus_first_2002,
