added final layer documentation.

--- a/templates/acronyms.tex
+++ b/templates/acronyms.tex
@@ -1,6 +1,7 @@
 \newacronym{aeo}{AEO}{Annual Energy Outlook}
 \newacronym{ann}{ANN}{Artificial Neural Network}
 \newacronym{aoi}{AOI}{Area of Interest}
+\newacronym{bht}{BHT}{Bottom Hole Temperature}
 \newacronym{br}{BR}{Basin and Range}
 \newacronym{bnn}{BNN}{Bayesian Neural Network}
 \newacronym{cnn}{CNN}{Convolutional Neural Network}
