--- a/templates/zotero.bib
+++ b/templates/zotero.bib
@@ -1,7 +1,55 @@
 
+@techreport{blackwell_geothermal_2014,
+	address = {Washington, D.C},
+	type = {Final {Report}},
+	title = {Geothermal {Data} {Aggregation} {Submission} of {Information} into the {National} {Geothermal} {Data} {System}},
+	shorttitle = {Recovery {Act}},
+	url = {http://www.osti.gov/servlets/purl/1135820},
+	abstract = {The National Geothermal Data System (NGDS) is a Department of Energy funded effort to create a single cataloged source for a variety of geothermal information through a distributed network of databases made available via web services. The NGDS will help identify regions suitable for potential development and further scientific data collection and analysis of geothermal resources as a source for clean, renewable energy. A key NGDS repository or ‘node’ is located at Southern Methodist University developed by a consortium made up of: • SMU Geothermal Laboratory • Siemens Corporate Technology, a division of Siemens Corporation • Bureau of Economic Geology at the University of Texas at Austin • Cornell Energy Institute, Cornell University • Geothermal Resources Council • MLKay Technologies • Texas Tech University • University of North Dakota. The focus of resources and research encompass the United States with particular emphasis on the Gulf Coast (on and off shore), the Great Plains, and the Eastern U.S. The data collection includes the thermal, geological and geophysical characteristics of these area resources. Types of data include, but are not limited to, temperature, heat flow, thermal conductivity, radiogenic heat production, porosity, permeability, geological structure, core geophysical logs, well tests, estimated reservoir volume, in situ stress, oil and gas well fluid chemistry, oil and gas well information, and conventional and enhanced geothermal system related resources. Libraries of publications and reports are combined into a unified, accessible, catalog with links for downloading non-copyrighted items. Field notes, individual temperature logs, site maps and related resources are included to increase data collection knowledge. Additional research based on legacy data to improve quality increases our understanding of the local and regional geology and geothermal characteristics. The software to enable the integration, analysis, and dissemination of this team’s NGDS contributions was developed by Siemens Corporate Technology. The SMU Node interactive application is accessible at http://geothermal.smu.edu. Additionally, files may be downloaded from either http://geothermal.smu.edu:9000/geoserver/web/ or through http://geothermal.smu.edu/static/DownloadFilesButtonPage.htm. The Geothermal Resources Council Library is available at https://www.geothermal-library.org},
+	number = {DOE Project DE-EE0002852},
+	urldate = {2021-06-16},
+	institution = {United States. Dept. of Energy},
+	author = {Blackwell, David and Golm, Michael and Cutright, Bruce and Gosnold, Will and Kay, Martin and Nagihara, Seiichi and Smith, Estela and Tester, Jefferson},
+	month = jun,
+	year = {2014},
+	note = {Medium: electronic resource},
+	keywords = {Geothermal Energy, Ngds National Geothermal Data System Heat Flow Geothermal Energy Smu Geothermal Lab Smu Node},
+}
+
+@misc{smu_geothermal_2017,
+	title = {Geothermal {NGDS} {Project}},
+	url = {https://www.smu.edu/Dedman/Academics/Departments/Earth-Sciences/Research/GeothermalLab/DataMaps/NGDS-Project},
+	urldate = {2021-06-16},
+	journal = {SMU Geothermal Lab - NGDS Project},
+	author = {{SMU}},
+	year = {2017},
+}
+
+@misc{smu_geothermal_2021,
+	title = {Geothermal {Data} {Aggregation}},
+	shorttitle = {{NGDS}},
+	url = {http://geothermal.smu.edu/gtda/},
+	abstract = {This National Geothermal Data System (NGDS) project aggregates geothermal data collected and curated by the SMU Geothermal Laboratory and its partner organizations listed below. The data are available to fellow researchers, prospectors, and the general public via a variety of methods for viewing and download. SMU Geothermal Laboratory grant sub-recipients include:
+
+- Siemens Corporate Technology, a division of Siemens Corporation
+- Bureau of Economic Geology, University of Texas at Austin (BEG)
+- Cornell Energy Institute, Cornell University
+- Geothermal Resources Council (GRC)
+- MLKay Technologies
+- Texas Tech University (TTU)
+- University of North Dakota (UND)
+
+This project was supported by an American Recovery and Reinvestment Act (ARRA) grant from the U.S. Department of Energy (DE-EE0002852) awarded to the SMU Geothermal Laboratory to aggregate heat flow and other relevant geothermal data for sharing across the National Geothermal Data System (NGDS).},
+	urldate = {2021-06-16},
+	journal = {SMU Node of the National Geothermal Data System},
+	author = {{SMU}},
+	year = {2021},
+}
+
 @misc{nmbgmr_nmbgmr_2021,
 	title = {{NMBGMR} {Interactive} {Map}},
 	url = {https://maps.nmt.edu/},
+	abstract = {New Mexico Bureau of Geology and Mineral Resources (A research \& service division of NM Tech)},
 	urldate = {2021-06-16},
 	journal = {NMBGMR Interactive Map},
 	author = {{NMBGMR}},
