--- a/templates/chap3.tex
+++ b/templates/chap3.tex
@@ -11,15 +11,15 @@ This investigation brings together a total of twenty-five (25) data sets coverin
 \label{tab:features}
 \end{table}
 
-As discussed in Section \ref{ch2:sysfund}, geothermal systems require permeability, heat, subsurface fluids, a trapping mechanism, and recharge. Following the slightly more simplified PFA assumptions of \citeauthor{bielicki_hydrogeolgic_2015} (\citeyear{bielicki_hydrogeolgic_2015}), an explorationist will want to quickly identify where heat, permeability, and fluids together define a favorable setting for a geothermal prospect. The prepared independent data inputs collectively address all three elements as noted in Table \ref{tab:features}. Rather than defining a dependent (predicted) variable that describes a total favorability score, this thesis focuses on a proof of concept prediction for a measurable quantity addressing just the heat risk element: geothermal gradient. This choice was made because a) geothermal gradient provides a direct proxy for accessible heat content, b) gradient point data is available from suitable compilations of well measurements collected across the study area, and c) for EGS applications, the only risk element that must be naturally present is heat. Heat flow might be a reasonable alternative dependent variable, however point values for heat flow in the available well database were derived directly from geothermal gradient values. Geothermometer measurements also suggest resource temperatures, but the uncertainty in fluid pathways leading to the sample location means these values suffer from less spatial and depth certainty than geothermal gradient.
+As discussed in Section \ref{ch2:sysfund}, geothermal systems require permeability, heat, subsurface fluids, a trapping mechanism, and recharge. Following the slightly more simplified PFA assumptions of \citet{bielicki_hydrogeolgic_2015}, an explorationist will want to quickly identify where heat, permeability, and fluids together define a favorable setting for a geothermal prospect. The prepared independent data inputs collectively address all three elements as noted in Table \ref{tab:features}. Rather than defining a dependent (predicted) variable that describes a total favorability score, this thesis focuses on a proof of concept prediction for a measurable quantity addressing just the heat risk element: geothermal gradient. This choice was made because a) geothermal gradient provides a direct proxy for accessible heat content, b) gradient point data is available from suitable compilations of well measurements collected across the study area, and c) for EGS applications, the only risk element that must be naturally present is heat. Heat flow might be a reasonable alternative dependent variable, however point values for heat flow in the available well database were derived directly from geothermal gradient values. Geothermometer measurements also suggest resource temperatures, but the uncertainty in fluid pathways leading to the sample location means these values suffer from less spatial and depth certainty than geothermal gradient.
 
 Regarding the remaining two risk elements: direct measurements of permeability (i.e., from downhole logs or core analysis) or fluids (e.g., flow rate from well tests) can be separately predicted using the same methods described in this study. A final favorability score, which is less straight-forward to calibrate for model validation and verification, could potentially be derived from the combined predictions as done in PFA risk assessments. This suggestion is outside of the scope of this thesis and thus appears in the list of future work opportunities (see Chapter 9).
 
 \section{Exploration Data Preparation}
 
-In order to experiment with a variety of machine learning methods, all input data sets first need to be transformed into fully-complete \acrlong{gis} (\acrshort{gis}) layers such that any point on the map of the study area has a corresponding set of 25 independent feature values. Steps taken to condition, process, and otherwise prepare each layer are outlined later in this chapter. As a preface, the following section reviews several key algorithms and concepts applied to one or more of the layers for clarity and reproducibility.
+In order to experiment with a variety of machine learning methods, all input data sets first need to be transformed into fully-complete \acrlong{gis} (\acrshort{gis}) layers such that any point on the map of the study area has a corresponding set of 25 independent feature values. Steps taken to condition, process, and otherwise prepare each layer are outlined later in this chapter. As a preface, the following section reviews several key concepts and algorithms referred to in the preparation of one or more of the layers.
 
-\subsection{Data Preparation Algorithms}
+\subsection{Data Preparation Fundamentals}
 
 \subsubsection{Extents}
 
@@ -30,45 +30,50 @@ Large data sets imported into ArcGIS or Python for feature preparation required 
 \item \acrlong{aoi} (\acrshort{aoi}): this polygon appears in most map figures in this thesis and is the perimeter outlining the nine counties in Southwest New Mexico: Cibola, Valencia, Catron, Socorro, Grant, Sierra, Luna, Dona Ana, and Hidalgo.
 \end{itemize}
 
-\subsubsection{Fishnet Points}\label{ssn:fishnet}
+\subsubsection{Decimation}\label{ssn:fishnet}
 
-\subsubsection{Simple Kriging}\label{ssn:kriging}
+\subsubsection{Gridding}
 
-\subsubsection{Empirical Bayes Kriging}\label{ssn:ebk}
+\begin{itemize}
+\item Kriging \label{ssn:kriging}
 
-\subsubsection{Splines}
+\item{Empirical Bayes Kriging}\label{ssn:ebk}
 
-\subsubsection{Topo to Raster?}
+\item{Splines}
 
-\subsubsection{\acrlong{kde} (\acrshort{kde})}\label{ssn:kde}
+\item{Topo to Raster?}
+\end{itemize}
+
+\subsubsection{Density}
+\acrlong{kde} (\acrshort{kde})\label{ssn:kde}
 
 \subsection{Data Layers}
 
 \subsubsection{Average Air Temperature}
 
-The University of Oregon PRISM Climate Group hosts regularly-updated spatial data sets of climate-related observations captured from different monitoring networks, including 30-year normals that describe average monthly or annual conditions \citep{daly_physiographically_2008, prism_prism_2021}. 800 m or 4 km resolution grids can be accessed directly from the website. The 800 m resolution air temperature grid was downloaded and imported into ArcGIS, then cropped using the Regional Polygon (Figure \ref{fig:feat_airtemp}). The layer required no further processing.
+The University of Oregon PRISM Climate Group hosts regularly-updated spatial data sets of climate-related observations captured from different monitoring networks, including 30-year normals that describe average monthly or annual conditions \citep{daly_physiographically_2008, prism_prism_2021}. The 800 m resolution air temperature grid was downloaded and imported into ArcGIS, then cropped using the Regional Polygon (Figure \ref{fig:feat_airtemp}). The layer required no further processing.
 
 \begin{figure}[!htp]
 \centering
 \includegraphics[scale=.50]{Figure-AvgAirTemp}
-\caption[Average air temperature data layer]{Average air temperature data layer. Units are in degrees Celsius. Data retrieved from \protect\citep{prism_prism_2021}.}
+\caption[Average air temperature data layer]{Average air temperature data layer. Units are in degrees Celsius. Data retrieved from the PRISM website \protect\citep{prism_prism_2021}.}
 \label{fig:feat_airtemp}
 \end{figure}
 
 \subsubsection{Average Precipitation}
 
-The University of Oregon PRISM Climate Group also compiles 30-year normals for average precipitation \citep{daly_physiographically_2008, prism_prism_2021}. The 800 m resolution precipitation grid was downloaded and imported into ArcGIS, then cropped to the Regional Polygon boundaries (Figure \ref{fig:feat_precip}). The layer required no further processing.
+The University of Oregon PRISM Climate Group also compiles 30-year normals for average precipitation \citep{daly_physiographically_2008, prism_prism_2021}. The 800 m resolution precipitation grid was downloaded and imported into ArcGIS, then cropped to the Regional Polygon boundary (Figure \ref{fig:feat_precip}). The layer required no further processing.
 
 \begin{figure}[!htp]
 \centering
 \includegraphics[scale=.50]{Figure-AvgPrecip}
-\caption[Average precipitation data layer]{Average precipitation data layer in 800 m resolution. Units are in millimeters. Data retrieved from \protect\citep{prism_prism_2021}.}
+\caption[Average precipitation data layer]{Average precipitation data layer in 800 m resolution. Units are in millimeters. Data retrieved from the PRISM website \protect\citep{prism_prism_2021}.}
 \label{fig:feat_precip}
 \end{figure}
 
 \subsubsection{Basement Depth}
 
-Following the procedure of \citeauthor{pepin_new_2018} (\citeyear{pepin_new_2018}), the basement elevation raster generated by \citeauthor{bielicki_hydrogeolgic_2015} (\citeyear{bielicki_hydrogeolgic_2015}) was downloaded, imported into ArcGIS, and processed to calculate depths. Specifically, a unit conversion from feet to meters was applied. Then, values were extracted on the point fishnet (see \ref{ssn:fishnet}), which highlighted missing data patches in the data. The ArcGIS \textit{Kriging} function interpolated values across these patches using the Ordinary method with Spherical semivariogram, a lag size of 0.096969 automatically determined by ArcGIS, and a variable search radius with a 4-point requirement. Basement depths were then calculated by subtracting the interpolated elevation layer from the surface topography (DEM) layer. However, the higher resolution of the DEM layer caused an imprint of detailed surface geomorphologies to appear on the calculated basement depth layer. To correct for this, the DEM layer was low pass filtered using the ArcGIS \textit{Filter} method, which averages a 3x3 neighborhood around each point in the data set. The final basement elevation layer (Figugre \ref{fig:feat_basementdepth}) was generated from the difference between the low-pass filtered DEM and the kriged basement depth.
+Following the procedure of \citet{pepin_new_2018}, the basement elevation raster generated by \citet{bielicki_hydrogeolgic_2015} was downloaded, imported into ArcGIS, and processed to calculate depths. Specifically, a unit conversion from feet to meters was applied. Then, values were extracted on the point fishnet (see \ref{ssn:fishnet}), which highlighted missing data patches in the data. The ArcGIS \textit{Kriging} function interpolated values across these patches using the Ordinary method with Spherical semivariogram, a lag size of 0.096969 automatically determined by ArcGIS, and a variable search radius with a 4-point requirement. Basement depths were then calculated by subtracting the interpolated elevation layer from the surface topography (DEM) layer. However, the higher resolution of the DEM layer caused an imprint of detailed surface geomorphologies to appear on the calculated basement depth layer. To correct for this, the DEM layer was low pass filtered using the ArcGIS \textit{Filter} method, which averages a 3x3 neighborhood around each point in the data set. The final basement elevation layer (Figugre \ref{fig:feat_basementdepth}) was generated from the difference between the low-pass filtered DEM and the kriged basement depth.
 
 \begin{figure}[h!]
 \centering
@@ -79,7 +84,7 @@ Following the procedure of \citeauthor{pepin_new_2018} (\citeyear{pepin_new_2018
 
 \subsubsection{Boron Concentration}
 
-Measurements of boron concentration were originally assembled by \citeauthor{bielicki_hydrogeolgic_2015} (\citeyear{bielicki_hydrogeolgic_2015}) from multiple sources ranging from USGS records to student dissertations. These data were downloaded from the OpenEI submission \citep{kelley_geothermal_2015} and merged together using ArcGIS and Python to create a single dataframe of 5686 measurements, all within the broader Regional Polygon bounds to avoid surface creation edge effects within the tighter AOI. The inconsistent spatial distribution of the data and sometimes significant variation among overlapping values from different measurement years created a unique challenge for making a representative GIS layer to use for analysis. An initial attempt to fit and interpolate the data using tuned Gaussian Process models created feature layers with too much local structure and little character away from the input data points. The ArcGIS \textit{Empirical Bayes Kriging} routine was selected instead due to its unique characteristics. For the final layer, EBK was applied with the Empirical data transformation type, a maximum of 100 points in each local model, 100 simulated semivariograms with K-Bessel model type, and a standard circular search neighborhood with a radius of 1.1957 (auto-generated), minimum of 10 neighbors, and maximum of 15 neighbors. The output grid cell size was set to 0.01 degrees. Of important note: the calculation option to include all coincident data was selected, so all overlapping measurements were considered in generating the final layer (Figure \ref{fig:feat_boron}).
+Measurements of boron concentration were originally assembled by \citet{bielicki_hydrogeolgic_2015} from multiple sources ranging from USGS records to student dissertations. These data were downloaded from the OpenEI submission \citep{kelley_geothermal_2015} and merged together using ArcGIS and Python to create a single dataframe of 5686 measurements, all within the broader Regional Polygon bounds to avoid surface creation edge effects within the tighter AOI. The inconsistent spatial distribution of the data and sometimes significant variation among overlapping values from different measurement years created a unique challenge for making a representative GIS layer to use for analysis. An initial attempt to fit and interpolate the data using tuned Gaussian Process models created feature layers with too much local structure and little character away from the input data points. The ArcGIS \textit{Empirical Bayes Kriging} routine was selected instead due to its unique characteristics. For the final layer, EBK was applied with the Empirical data transformation type, a maximum of 100 points in each local model, 100 simulated semivariograms with K-Bessel model type, and a standard circular search neighborhood with a radius of 1.1957 (auto-generated), minimum of 10 neighbors, and maximum of 15 neighbors. The output grid cell size was set to 0.01 degrees. Of important note: the calculation option to include all coincident data was selected, so all overlapping measurements were considered in generating the final layer (Figure \ref{fig:feat_boron}).
 
 \begin{figure}[!htp]
 \centering
@@ -90,7 +95,7 @@ Measurements of boron concentration were originally assembled by \citeauthor{bie
 
 \subsubsection{Crustal Thickness}
 
-In the absence of a more recent seismic study constraining variations in crustal thickness across the study area, the 2.5D regional map published by \citeauthor{keller_comparative_1991} (\citeyear{keller_comparative_1991}) was to construct the crustal thickness feature layer. Similar to the procedure described in \citep{pepin_new_2018}, the Keller map was georeferenced in ArcGIS, and thickness contours were manually digitized as polylines. These polylines continued slightly beyond the AOI boundary to ensure proper constraints for surface creation without artifacts near the AOI edges. The ArcGIS function \textit{Feature to 3D by Attribute} converted the polylines into 3D contours, and \textit{Topo to Raster} interpolated the contours into a continuous final grid (Figure \ref{fig:feat_crust}). Since the Keller map was derived from low-resolution seismic lines from the 1960s-1980s, the result is a very low frequency approximation for crustal thickness variations associated with the CP and RGR. As such, \textit{Topo to Raster} a larger cell size of 0.025 degrees was used. Other parameters choices include: margin in the cells of 20, smallest z value for interpolation of 25, largest z value for the interpolation of 55, Enforce selection for drainage enforcement, and maximum iterations of 20.
+In the absence of a more recent seismic study constraining variations in crustal thickness across the study area, the 2.5D regional map published by \citet{keller_comparative_1991} was to construct the crustal thickness feature layer. Similar to the procedure described in \citep{pepin_new_2018}, the Keller map was georeferenced in ArcGIS, and thickness contours were manually digitized as polylines. These polylines continued slightly beyond the AOI boundary to ensure proper constraints for surface creation without artifacts near the AOI edges. The ArcGIS function \textit{Feature to 3D by Attribute} converted the polylines into 3D contours, and \textit{Topo to Raster} interpolated the contours into a continuous final grid (Figure \ref{fig:feat_crust}). Since the Keller map was derived from low-resolution seismic lines from the 1960s-1980s, the result is a very low frequency approximation for crustal thickness variations associated with the CP and RGR. As such, \textit{Topo to Raster} a larger cell size of 0.025 degrees was used. Other parameters choices include: margin in the cells of 20, smallest z value for interpolation of 25, largest z value for the interpolation of 55, Enforce selection for drainage enforcement, and maximum iterations of 20.
 
 \begin{figure}[!htp]
 \centering
@@ -112,7 +117,7 @@ Drainage polyline data comes from the \citep{bielicki_hydrogeolgic_2015} PFA Ope
 
 \subsubsection{Earthquake Density}
 
-Following the procedure outlined by \citeauthor{pepin_new_2018} (\citeyear{pepin_new_2018}), an earthquake data set for southwest New Mexico was created by combining historical earthquake catalogs for 1869-1998 \citep{sanford_earthquake_2002}, 1999-2004 \citep{sanford_earthquake_2006}, and 2005-2009 \citep{pursley_earthquake_2013} with data pulled from the USGS Earthquake catalog \citep{usgs_earthquake_2021} through to January 2021. All events were combined into a single dataframe in Python, and event duplicates were removed. The final catalog, cropped to the Regional Polygon boundary, consists of 2539 events spanning 1962-2020. This point set was loaded into a KDE Python script, which used a grid search routine to determine the best radius for a Gaussian kernel density operator. Ten-fold cross validation was employed, which splits the data into 10 subsets and then interchangeably trains on 9 and tests on one to get an average performance score. The maximum negative log likelihood indicates a best radius value of 11,600 m (Figure \ref{fig:EQ_cv}). 
+Following the procedure outlined by \citet{pepin_new_2018}, an earthquake data set for southwest New Mexico was created by combining historical earthquake catalogs for 1869-1998 \citep{sanford_earthquake_2002}, 1999-2004 \citep{sanford_earthquake_2006}, and 2005-2009 \citep{pursley_earthquake_2013} with data pulled from the USGS Earthquake catalog \citep{usgs_earthquake_2021} through to January 2021. All events were combined into a single dataframe in Python, and event duplicates were removed. The final catalog, cropped to the Regional Polygon boundary, consists of 2539 events spanning 1962-2020. This point set was loaded into a KDE Python script, which used a grid search routine to determine the best radius for a Gaussian kernel density operator. Ten-fold cross validation was employed, which splits the data into 10 subsets and then interchangeably trains on 9 and tests on one to get an average performance score. The maximum negative log likelihood indicates a best radius value of 11,600 m (Figure \ref{fig:EQ_cv}). 
 
 \begin{figure}[!htp]
 \centering
@@ -162,7 +167,7 @@ Due to the size of the model file and complexity of this calculation, the data w
 
 \subsubsection{Gravity Anomaly}
 
-Terrain-corrected gravity anomaly data available from the University of Texas El Paso \citep{utep_gravity_2011} were used in both the southwest NM PFA analysis \citep{bielicki_hydrogeolgic_2015} and cluster analysis \citep{pepin_new_2018}. The data layer from \citeauthor{bielicki_hydrogeolgic_2015} was downloaded from their OpenEI submission \citep{kelley_geothermal_2015} and loaded into ArcGIS. The layer (Figure \ref{fig:feat_gravity}) required no further processing.
+Terrain-corrected gravity anomaly data available from the University of Texas El Paso \citep{utep_gravity_2011} were used in both the southwest NM PFA analysis \citep{bielicki_hydrogeolgic_2015} and cluster analysis \citep{pepin_new_2018}. The data layer from \citet{bielicki_hydrogeolgic_2015} was downloaded from their OpenEI submission \citep{kelley_geothermal_2015} and loaded into ArcGIS. The layer (Figure \ref{fig:feat_gravity}) required no further processing.
 
 \begin{figure}[!htp]
 \centering
@@ -254,7 +259,7 @@ The locations of springs across the study area were downloaded from the USGS Nat
 
 \begin{figure}[!htp]
 \centering
-\includegraphics[scale=.50]{templates/images/Figure-Springs_kde_gridsearchcv2.png}
+\includegraphics[scale=.50]{templates/images/Figure-Springs_kde_gridsearchcv_result.png}
 \caption[Spring density parameter tuning]{Cross-validation results for springs KDE. Red dashed line indicates maximum negative log likelihood value identifying the best choice for Gaussian kernel radius.}
 \label{fig:spring_cv}
 \end{figure}
@@ -281,7 +286,7 @@ Digitized state geologic map fault outlines are available for download from the 
 
 \subsubsection{Surface Topography}
 
-The southwest NM PFA data archive \citep{kelley_geothermal_2015} includes a Digital Elevation Model layer with surface elevations at a 1 arcsec resolution. This layer was downloaded and imported into ArcGIS, however a data gap along the easternmost section of the AOI required two additional $1^\circ$x$1^\circ$ DEM tiles at the same resolution to fully complete the layer. These tiles were downloaded from the USGS The National Map website \citep{usgs_tnm_2021} and merged with the original DEM. The final layer (Figure \ref{fig:feat_dem}) required no further processing.
+The southwest NM PFA data archive \citep{kelley_geothermal_2015} includes a Digital Elevation Model layer with surface elevations at a 1 arc-sec resolution. This layer was downloaded and imported into ArcGIS, however a data gap along the easternmost section of the AOI required two additional $1^\circ$x$1^\circ$ DEM tiles at the same resolution to fully complete the layer. These tiles were downloaded from the USGS The National Map website \citep{usgs_tnm_2021} and merged with the original DEM. The final layer (Figure \ref{fig:feat_dem}) required no further processing.
 
 \begin{figure}[!htp]
 \centering
@@ -290,13 +295,77 @@ The southwest NM PFA data archive \citep{kelley_geothermal_2015} includes a Digi
 \label{fig:feat_dem}
 \end{figure}
 
+\subsubsection{Topographic Gradient}
+
+Surface elevation gradient was calculated using the ArcGIS \textit{Slope} function on the final Surface elevation layer. Parameters selected to create this layer (Figure \ref{fig:feat_dem_gradient}) include: Geodesic method, Z unit of meters, and output measurement of degrees.
+
+\begin{figure}[!htp]
+\centering
+\includegraphics[scale=.50]{templates/images/Figure-DEM-Gradient.png}
+\caption[Topographic gradient data layer]{Topographic gradient data layer. Units are in meters/degrees.}
+\label{fig:feat_dem_gradient}
+\end{figure}
+
+\subsubsection{Volcanic Dike Density}
+
+The USGS Energy and Environment in the Rocky Mountain Area data portal \citep{usgs_eerma_2021} also includes digitized volcanic dike outlines from the New Mexico state geologic map \citep{stoeser_new_2005-1}. This data set was loaded into ArcGIS and, like the Quaternary fault data set, converted to a density layer using the Kernel Density operation (Figure \ref{fig:feat_dikes}). Selected parameters for this function included an output cell size of 0.0025 degrees and an auto-generated search radius of 0.2520.
+
+\begin{figure}[!htp]
+\centering
+\includegraphics[scale=.50]{templates/images/Figure-DikeDensity.png}
+\caption[Volcanic dike data layer]{Volcanic dike density data layer. Units are in degrees/square degrees. Black lines show the dike polyline data set obtained from USGS Open-File Report 2005-1351 \protect\citep{stoeser_new_2005-1}.}
+\label{fig:feat_dikes}
+\end{figure}
+
+\subsubsection{Volcanic Vent Density}
+
+Volcanic vents identified in the study area were retrieved from the New Mexico Bureau of Geology and Mineral Resources using the NMBGMR Interactive Map \citep{nmbgmr_nmbgmr_2021}. A total of 811 volcanic vents are observed within the geographic bounds of the Regional Polygon. As with the Earthquake density layer, the point set was loaded into a KDE Python script, which used a grid search routine to determine the best radius for a Gaussian kernel density operator. Ten-fold cross validation identified the best radius value of 28300 m (Figure \ref{fig:vent_cv}). 
+
+\begin{figure}[!htp]
+\centering
+\includegraphics[scale=.50]{templates/images/Figure-Vents_kde_gridsearchcv_result.png}
+\caption[Volcanic vent density parameter tuning]{Cross-validation results for volcanic vent KDE. Red dashed line indicates maximum negative log likelihood value identifying the best choice for Gaussian kernel radius.}
+\label{fig:vent_cv}
+\end{figure}
+
+KDE values calculated at each fishnet point location were loaded into ArcGIS, and \textit{Kriging} was used to generate a final layer (Figure \ref{fig:feat_vents}) for plotting purposes. \textit{Kriging} parameters included Ordinary kriging method, Spherical semivariogram model, lag size of 1e-6, variable search radius with 12-point requirement, and an output cell size of 0.01. 
+
+\begin{figure}[!htp]
+\centering
+\includegraphics[scale=.50]{templates/images/Figure-VentDensity.png}
+\caption[Volcanic vent data layer]{Volcanic vent density data layer. Units are in log density \((points/km^2)\). Block dots indicate vent locations from \protect\citep{nmbgmr_nmbgmr_2021}}
+\label{fig:feat_vents}
+\end{figure}
+
 \subsubsection{Water Table Depth}
 
-\citeauthor{bielicki_hydrogeolgic_2015} (\citeyear{bielicki_hydrogeolgic_2015}) mapped the depth to water table using data from the USGS and several additional sources. This raster was downloaded from their OpenEI submission \citep{kelley_geothermal_2015} and imported into ArcGIS. Data gaps between the raster extent and AOI polygon to the south and the east necessitated extrapolation of the layer, so ArcGIS \textit{Empirical Bayes Kriging} was applied to fill in the missing edge values. After some trial-and-error, the chosen parameter values for the final layer (Figure \ref{fig:feat_wtdepth}) include an output cell size of 0.01, Empirical data transformation type, a maximum of 100 points in each local model, 100 simulated semivariograms with Exponential model type, and a standard circular search neighborhood with a radius of 1.2652 (auto-generated), minimum of 10 neighbors, and maximum of 15 neighbors.
+\citet{bielicki_hydrogeolgic_2015} mapped the depth to water table using data from the USGS and several additional sources. This raster was downloaded from their OpenEI submission \citep{kelley_geothermal_2015} and imported into ArcGIS. Data gaps between the raster extent and AOI polygon to the south and the east necessitated extrapolation of the layer, so ArcGIS \textit{Empirical Bayes Kriging} was applied to fill in the missing edge values. After some trial-and-error, the chosen parameter values for the final layer (Figure \ref{fig:feat_wtdepth}) include an output cell size of 0.01, Empirical data transformation type, a maximum of 100 points in each local model, 100 simulated semivariograms with Exponential model type, and a standard circular search neighborhood with a radius of 1.2652 (auto-generated), minimum of 10 neighbors, and maximum of 15 neighbors.
 
 \begin{figure}[!htp]
 \centering
 \includegraphics[scale=.50]{Figure-WTDepth}
 \caption[Water table depth data layer]{Water table depth data layer. Units in feet. Adapted from raster created by \protect\citep{bielicki_hydrogeolgic_2015}.}
 \label{fig:feat_wtdepth}
+\end{figure}
+
+\subsubsection{Water Table Gradient}
+
+A pre-calculated grid for the gradient of water table elevation is among the layers included in the southwestern NM PFA archive \citep{kelley_geothermal_2015}. These data were downloaded and imported into ArcGIS. In order to fill data gaps between the raster extent and the AOI polygon to the south and the east, the ArcGIS \textit{Empirical Bayes Kriging} process was applied. After some trial-and-error, the final layer (Figure \ref{fig:feat_wt_gradient}) was generated using the following parameter values: output cell size of 0.01, Empirical data transformation type, a maximum of 100 points in each local model, 100 simulated semivariograms with Exponential model type, and a standard circular search neighborhood with a radius of 1.2652 (auto-generated), minimum of 10 neighbors, and maximum of 15 neighbors.
+
+\begin{figure}[!htp]
+\centering
+\includegraphics[scale=.50]{templates/images/Figure-WTGradient.png}
+\caption[Water table gradient data layer]{Water table gradient data layer. Units are in feet/degrees. Based on raster from \protect\citep{bielicki_hydrogeolgic_2015}.}
+\label{fig:feat_wt_gradient}
+\end{figure}
+
+\subsubsection{Geothermal Gradient}
+
+The dependent variable for this analysis comes from observations stored in the SMU Heat Flow Database from \acrlong{bht} Data, accessed via the SMU node of the National Geothermal Data System \citep{smu_geothermal_2021}. This database focuses specifically on heat flow values calculated using geothermal gradient and conductivity measurements from well data in journal articles, books, reports, and from other sources \citep{blackwell_geothermal_2014}. Geothermal gradient values are provided in two forms: reported gradient and corrected gradient. The latter reports the result of both temperature and terrain corrections based on the well depth interval that a measurement was taken. If a corrected geothermal gradient value existed, this value was used in this analysis, otherwise the regular geothermal gradient value was selected. The well data set was clipped to the bounds of the Regional Polygon, then loaded into Python for conditioning. Well records missing geographic coordinates or a geothermal gradient value of either type were dropped. The list was sorted on coordinates and gradient, and only the first record for each location (well) was kept. The sort was in descending order, so this method preserved the highest gradient value captured per well. The final set of values shown in Figure \ref{fig:feat_geotherm_gradient} comprise the raw input data used for predictive modeling of geothermal gradient across the study AOI.
+
+\begin{figure}[!htp]
+\centering
+\includegraphics[scale=.50]{templates/images/Figure-GeothermGrad_OrigWells.png}
+\caption[Geothermal gradient data layer]{Geothermal gradient observations from well data. Units are in degrees C/km. Data retrieved from the SMU NGDS portal \protect\citep{smu_geothermal_2021}}
+\label{fig:feat_geotherm_gradient}
 \end{figure}
